Mejoramiento de estilos

--- a/WIRECLOUD/WIDGETS & OPERATORS/Lista/index.html
+++ b/WIRECLOUD/WIDGETS & OPERATORS/Lista/index.html
@@ -5,23 +5,32 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-		<title>Pagina 1</title>
+		<title>Lista</title>
+		<!-- Styles -->
+		<link href="css/styles.css" rel="stylesheet">
 
+	</head>
+	<body>
+		<div id="title">
+			Available Items
+		</div>
+		<div class="contendor">
+			<ol id="selectable">
+				<li class="ui-widget-content">
+					Item 1
+				</li>
+				<li class="ui-widget-content">
+					Item 2
+				</li>
+				<li class="ui-widget-content">
+					Item 3
+				</li>
+			</ol>
+		</div>
 		<!-- jquery -->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery-ui.js"></script>
 		<script src="js/main.js"></script>
-		<!-- Styles -->
-		<link href="css/styles.css" rel="stylesheet">
-	</head>
-	<body>
-		<div id="title">List</div>
-		<ol id="selectable">
-			<li class="ui-widget-content">
-				Item 1
-			</li>
-		</ol>
-		
-		
+
 	</body>
 </html>
