--- a/WIRECLOUD/WIDGETS & OPERATORS/GaugeChart/index.html
+++ b/WIRECLOUD/WIDGETS & OPERATORS/GaugeChart/index.html
@@ -6,11 +6,6 @@
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 		<title>Graph Nvd3 Angular</title>
 
-		<!-- Load d3.js and c3.js -->
-		<script src="d3.min.js" charset="utf-8"></script>
-		<script src="c3.js"></script>
-		<!-- Load main.js -->
-		<script src="js/main.js" charset="UTF-8"></script>
 		<!-- Estilos -->
 		<link href="css/styles.css" rel="stylesheet">
 		<!-- Load c3.css-->
@@ -18,5 +13,10 @@
 	</head>
 	<body>
 		<div id="gauge"></div>
+		<!-- Load d3.js and c3.js -->
+		<script src="js/d3.min.js" charset="utf-8"></script>
+		<script src="js/c3.js"></script>
+		<!-- Load main.js -->
+		<script src="js/main.js" charset="UTF-8"></script>
 	</body>
 </html>
