--- a/WIRECLOUD/WIDGETS & OPERATORS/Lista/index.html
+++ b/WIRECLOUD/WIDGETS & OPERATORS/Lista/index.html
@@ -30,6 +30,7 @@
 		<!-- jquery -->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery-ui.js"></script>
+		<script src="js/websocket.js"></script>
 		<script src="js/main.js"></script>
 
 	</body>
