Componenete listo para elevarlo a widget. Uso de Websocket con exito.

--- a/WIRECLOUD/WIDGETS & OPERATORS/ndv3Graph/index.html
+++ b/WIRECLOUD/WIDGETS & OPERATORS/ndv3Graph/index.html
@@ -16,10 +16,10 @@
 				<div class="col-sm-12">
 					<div class="card-box">
 						<h4 class="m-t-0 m-b-20 header-title"><b>Discrete Bar Chart</b></h4>
-
 						<div class="bar-chart">
 							<svg style="height:300px;width:100%"></svg>
 						</div>
+						<div id="msg"></div>
 					</div>
 				</div>
 			</div>
@@ -32,7 +32,7 @@
 		<script src="assets/d3/d3.min.js"></script>
 		<script src="assets/nvd3/build/nv.d3.min.js"></script>
 		<script src="js/jquery.nvd3.init.js"></script>
-		
+		<script src="js/websocket.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
