widget preparado para Wirecloud. Se agrega la funcionalidad de swith para presentar el componente en pantalla y para ser ejecutado en Wirecloud

--- a/WIRECLOUD/WIDGETS & OPERATORS/Lista/index.html
+++ b/WIRECLOUD/WIDGETS & OPERATORS/Lista/index.html
@@ -16,16 +16,8 @@
 		</div>
 		<div class="contendor">
 			<ol id="selectable">
-				<li class="ui-widget-content">
-					Item 1
-				</li>
-				<li class="ui-widget-content">
-					Item 2
-				</li>
-				<li class="ui-widget-content">
-					Item 3
-				</li>
 			</ol>
+			<div id="msg"></div>
 		</div>
 		<!-- jquery -->
 		<script src="js/jquery.min.js"></script>
