Adaptacion con websocket

--- a/WIRECLOUD/WIDGETS & OPERATORS/ndv3Graph/index.html
+++ b/WIRECLOUD/WIDGETS & OPERATORS/ndv3Graph/index.html
@@ -16,7 +16,7 @@
 				<div class="col-sm-12">
 					<div class="card-box">
 						<h4 class="m-t-0 m-b-20 header-title"><b>Discrete Bar Chart</b></h4>
-						<div class="bar-chart">
+						<div class="chart">
 							<svg style="height:300px;width:100%"></svg>
 						</div>
 						<div id="msg"></div>
