--- a/WIRECLOUD/WIDGETS & OPERATORS/GaugeChart/index.html
+++ b/WIRECLOUD/WIDGETS & OPERATORS/GaugeChart/index.html
@@ -13,10 +13,14 @@
 	</head>
 	<body>
 		<div id="gauge"></div>
+		<div id="msg"></div>
+		<!-- jquery -->
+		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<!-- Load d3.js and c3.js -->
 		<script src="js/d3.min.js" charset="utf-8"></script>
 		<script src="js/c3.js"></script>
 		<!-- Load main.js -->
+		<script src="js/websocket.js" charset="UTF-8"></script>
 		<script src="js/main.js" charset="UTF-8"></script>
 	</body>
 </html>
