Implementado el cierre del socket

--- a/WIRECLOUD/WIDGETS & OPERATORS/ndv3Graph/index.html
+++ b/WIRECLOUD/WIDGETS & OPERATORS/ndv3Graph/index.html
@@ -15,11 +15,12 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<div class="card-box">
-						<h4 class="m-t-0 m-b-20 header-title"><b>Discrete Bar Chart</b></h4>
+						<h4 class="m-t-0 m-b-20 header-title"><b>Testing Version</b></h4>
 						<div class="chart">
 							<svg style="height:300px;width:100%"></svg>
 						</div>
 						<div id="msg"></div>
+						<button id="btnTest" onClick="cerrar()">Cerrar</button>
 					</div>
 				</div>
 			</div>
