--- a/WIRECLOUD/WIDGETS & OPERATORS/ndv3Graph/index.html
+++ b/WIRECLOUD/WIDGETS & OPERATORS/ndv3Graph/index.html
@@ -17,10 +17,8 @@
 					<div class="card-box">
 						<h4 class="m-t-0 m-b-20 header-title"><b>Testing Version</b></h4>
 						<div class="chart">
-							<svg style="height:300px;width:100%"></svg>
+							<svg style="height:250px;width:100%"></svg>
 						</div>
-						<div id="msg"></div>
-						<button id="btnTest" onClick="cerrar()">Cerrar</button>
 					</div>
 				</div>
 			</div>
@@ -31,7 +29,7 @@
 		<script src="assets/js/bootstrap.min.js"></script>
 		<!-- nvd3 -->
 		<script src="assets/d3/d3.min.js"></script>
-		<script src="assets/nvd3/build/nv.d3.min.js"></script>
+		<script src="assets/nvd3/build/nv.d3.js"></script>
 		<script src="js/jquery.nvd3.init.js"></script>
 		<script src="js/websocket.js"></script>
 		<script src="js/main.js"></script>
