--- a/WIRECLOUD/WIDGETS & OPERATORS/Lista/_index.html
+++ b/WIRECLOUD/WIDGETS & OPERATORS/Lista/_index.html
@@ -5,22 +5,25 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-		<title>Filters</title>
+		<title>Lista</title>
 		<!-- Styles -->
 		<link href="css/styles.css" rel="stylesheet">
+
 	</head>
 	<body>
+		<div id="title">
+			Available Items
+		</div>
 		<div class="contendor">
-			<div id="title"><span>Filter's List</span></div>
-			<div id="no-data"><div id="contenido"></div></div>
-			<div>
-				<ul id="list"></ul>
-			</div>
+			<ol id="selectable">
+			</ol>
+			<div id="msg"></div>
 		</div>
 		<!-- jquery -->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery-ui.js"></script>
 		<script src="js/websocket.js"></script>
 		<script src="js/main.js"></script>
+
 	</body>
 </html>
