--- a/WIRECLOUD/WIDGETS & OPERATORS/ndv3Graph/index.html
+++ b/WIRECLOUD/WIDGETS & OPERATORS/ndv3Graph/index.html
@@ -15,9 +15,9 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<div class="card-box">
-						<h4 class="m-t-0 m-b-20 header-title"><b>Testing Version</b></h4>
+						<div id="no-data"><div id="contenido"></div></div>
 						<div class="chart">
-							<svg style="height:250px;width:100%"></svg>
+							<svg style="height:100px;width:100%"></svg>
 						</div>
 					</div>
 				</div>
