--- a/WIRECLOUD/WIDGETS & OPERATORS/Filters/index.html
+++ b/WIRECLOUD/WIDGETS & OPERATORS/Filters/index.html
@@ -20,7 +20,7 @@
 		<!-- jquery -->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery-ui.js"></script>
-		<script src="js/websocket.js"></script>
-		<script src="js/main.js"></script>
+		<script src="js/websocket.js" type="text/javascript"></script>
+		<script src="js/main.js" type="text/javascript"></script>
 	</body>
 </html>
